--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
                 <a class="nav-item nav-link" href="#contacts" data-value="contacts">Контакты</a>
             </div>
             <div class="lang-select">
-                <span>ua</span>
-                <span>en</span>
-                <span>ru</span>
+                <div class="lang-btn">ua</div>
+                <div class="lang-btn">en</div>
+                <div class="lang-btn">ru</div>
             </div>
         </div>
     </nav>
