--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
     <link rel="stylesheet" href="sass/main.css">
 </head>
 <body>
-    <div class="container">
+    <div class="container-fluid first-screen">
+
         <!--NAVBAR-->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid">
+            <div class="container-fluid px-5">
               <a class="navbar-brand" href="#">Navbar</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -32,13 +33,28 @@
                     <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
                   </li>
                 </ul>
+                <div class="lang-switcher">
+                  <button class="lang-btn" lang="ua">ua</button>
+                  <button class="lang-btn" lang="ru">ru</button>
+                </div>
               </div>
+              
             </div>
           </nav>
+
+          <!--FIRST SCREEN-->
+          <div class="main-content-wrapper">
+            <img src="img/WEB-DESIGN.svg" alt="">
+            <p>&</p>
+            <h1>DEVELOPMENT</h1>
+            <p class="short-desc">Информационный сайт / сайт-портфолио /  лендинг / блог / интернет магазин / графический дизайн</p>
+            <button>Узнать больше</button>
+          </div>
     </div>
     
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="js/lang-switch.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
