--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <!-- Rounded switch -->
                 <div class="theme-switcher">
                   <label class="switch">
-                    <input type="checkbox">
+                    <input type="checkbox" class="theme-switch">
                     <span class="slider round"></span>
                   </label>
                 </div>
@@ -97,6 +97,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="js/lang-switch.js"></script>
+    <script src="js/theme-switch.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
