--- a/index.html
+++ b/index.html
@@ -21,17 +21,21 @@
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link" aria-current="page" href="#">Обо мне</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Features</a>
+                    <a class="nav-link" href="#">Портфолио</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Pricing</a>
+                    <a class="nav-link" href="#">Рабочий процесс</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                    <a class="nav-link" href="#">Блог</a>
                   </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Контакты</a>
+                  </li>
+                  
                 </ul>
                 <!-- language switcher -->
                 <div class="lang-switcher">
@@ -111,8 +115,11 @@
     </div>
     <!-- ABOUT ME -->
     <div id="about" class="container-fluid about-me">
-      <div class="row about-header justify-content-center align-items-center">
-          <h1>Обо мне</h1>
+      <div class="row">
+        <div class="col-12 block-header">
+          <h1 class="text-center">Обо мне</h1>
+        </div>
+          
       </div>
       <div class="row">
           <div class="col-lg-4 img-wrapper">
