--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
       </div>
     </div>
     <div class="row">
-        <div class="info-text col-lg-6 col-xl-6">
+        <div class="dev-tz info-text col-lg-6 col-xl-6">
             <h2>Cоставление ТЗ совместно с заказчиком:</h2>
             <p>
                 Определение целей и задач сайта, его структуры 
@@ -234,7 +234,7 @@
         </div>
     </div>
     <div class="row">
-        <div class="info-text col-lg-6 col-xl-6 order-lg-2 order-xl-2">
+        <div class="struct info-text col-lg-6 col-xl-6 order-lg-2 order-xl-2">
             <h2>Разработка структурного макета:</h2>
             <p>
                 Расположение элементов навигации, основные блоки,
@@ -248,7 +248,7 @@
         </div>
     </div>
     <div class="row">
-        <div class="info-text col-lg-6 col-xl-6">
+        <div class="layout info-text col-lg-6 col-xl-6">
             <h2>Создание графического дизайн-макета:</h2>
             <p>
                 Выбор цветовой схемы для сайта с учетом тематики,
@@ -263,7 +263,7 @@
         </div>
     </div>
     <div class="row">
-        <div class="info-text col-lg-6 col-xl-6 order-lg-2 order-xl-2">
+        <div class="dev info-text col-lg-6 col-xl-6 order-lg-2 order-xl-2">
             <h2>Разработка сайта:</h2>
             <p>
                 Верстка сайта по дизайн-макету, программирование поведения
@@ -277,7 +277,7 @@
         </div>
     </div>
     <div class="row">
-        <div class="info-text col-lg-6 col-xl-6">
+        <div class="deploy info-text col-lg-6 col-xl-6">
             <h2>Размещение на хостинге, тестирование и запуск сайта:</h2>
             <p>
                 Регистрация доменого имени, настройка хостинга, 
@@ -291,6 +291,42 @@
         </div>
     </div>
   </div>
+
+  <!--BLOG-->
+  <div id="blog" class="container blog">
+    <div class="row">
+      <div class="col-12 block-header">
+        <h1 class="text-center">Мой блог</h1>
+        <p class="desc">Полезная информация о дизайне, верстке и программировании по рубрикам:</p>
+      </div>
+    </div>
+    <div class="row">
+        <div class="category col-lg-4 col-xl-4">
+            <div class="cat-icon css">
+                <span class="first-line">HTML</span>
+                <span class="second-line">CSS</span>
+            </div>
+        </div>
+        <div class="category col-lg-4 col-xl-4">
+            <div class="cat-icon js">
+                <span class="first-line">Java</span>
+                <span class="second-line">Script</span>
+            </div>
+        </div>
+        <div class="category col-lg-4 col-xl-4">
+            <div class="cat-icon ui">
+                <span class="first-line">UI/UX</span>
+                <span class="second-line">Design</span>
+            </div>
+        </div>
+    </div>
+     <div class="row blog-btn">
+       <div class="col-12 col-lg-4 text-center">
+        <button type="button" class="btn btn-outline-primary btn-lg">Все записи блога...</button>
+       </div>
+        
+    </div>
+</div>
     
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
