--- a/index.html
+++ b/index.html
@@ -294,12 +294,12 @@
 
   <!--BLOG-->
   <div id="blog" class="container blog">
-    <div class="row">
-      <div class="col-12 block-header">
-        <h1 class="text-center">Мой блог</h1>
-        <p class="desc">Полезная информация о дизайне, верстке и программировании по рубрикам:</p>
+      <div class="row">
+        <div class="col-12 block-header">
+          <h1 class="text-center">Мой блог</h1>
+          <p class="desc">Полезная информация о дизайне, верстке и программировании по рубрикам:</p>
+        </div>
       </div>
-    </div>
     <div class="row">
         <div class="category col-lg-4 col-xl-4">
             <div class="cat-icon css">
@@ -320,14 +320,74 @@
             </div>
         </div>
     </div>
-     <div class="row blog-btn">
-       <div class="col-12 col-lg-4 text-center">
-        <button type="button" class="btn btn-outline-primary btn-lg">Все записи блога...</button>
-       </div>
-        
+      <div class="row blog-btn">
+          <div class="col-12 col-lg-4 text-center">
+            <button type="button" class="btn btn-outline-primary btn-lg">Все записи блога...</button>
+          </div>
+      </div>
+  </div>
+  
+  <!--CONTACTS-->
+    <div id="contacts" class="container my-contacts">
+      <div class="row">
+        <div class="col-12 block-header">
+          <h1 class="text-center">Контакты</h1>
+          <p class="desc">Выберите удобный для Вас способ и свяжитесь со мной,  отвечу на все интересующие Вас вопросы.</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-12 contact-links">
+          <div class="contact-link-wrapper">
+              <a href="tel:+380955661002">
+                <div class="contact-link-icon phone">
+                  <img src="/img/svg/contacts/phone.svg" alt="позвонить">
+                </div>
+                <p>Позвонить<br> +38(095)566-10-02</p>
+              </a>
+          </div>
+          <div class="contact-link-wrapper">
+              <a href="viber://add?number=380955661002">
+                  <div class="contact-link-icon viber">
+                      <img src="/img/svg/contacts/viber.svg" alt="viber">
+                  </div>
+                  <p>Написать в Viber</p>
+              </a>
+          </div>
+          <div class="contact-link-wrapper">
+              <a href="https://telegram.me/ArtemSte">
+                  <div class="contact-link-icon telegram">
+                    <img src="/img/svg/contacts/telegram.svg" alt="telegram">
+                  </div>
+                  <p>Написать в Telegram</p>
+              </a>
+          </div>
+          <div class="contact-link-wrapper">
+              <a href="https://wa.me/380955661002">
+                <div class="contact-link-icon whatsapp">
+                  <img src="/img/svg/contacts/whatsapp.svg" alt="whatsapp">
+                </div>
+                <p>Написать в WhatsApp</p>
+              </a>
+          </div>
+          <div class="contact-link-wrapper">
+              <a href="skype:art_ste?chat">
+                <div class="contact-link-icon skype">
+                  <img src="/img/svg/contacts/skype.svg" alt="skype">
+                </div>
+                <p>Написать в Skype</p>
+              </a>
+          </div>
+          <div class="contact-link-wrapper">
+              <a href="https://www.instagram.com/art.web.dev/">
+                <div class="contact-link-icon instagram">
+                  <img src="/img/svg/contacts/instagram.svg" alt="instagram">
+                </div>
+                <p>Написать в Instagram</p>
+              </a>
+          </div>
+      </div>
     </div>
-</div>
-    
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="js/lang-switch.js"></script>
