add contacts dark css

--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
                 <div class="contact-link-icon phone">
                   <img src="/img/svg/contacts/phone.svg" alt="позвонить">
                 </div>
-                <p>Позвонить<br> +38(095)566-10-02</p>
+                <p class="phone-txt">Позвонить<br> +38(095)566-10-02</p>
               </a>
           </div>
           <div class="contact-link-wrapper">
@@ -350,7 +350,7 @@
                   <div class="contact-link-icon viber">
                       <img src="/img/svg/contacts/viber.svg" alt="viber">
                   </div>
-                  <p>Написать в Viber</p>
+                  <p>Viber</p>
               </a>
           </div>
           <div class="contact-link-wrapper">
@@ -358,7 +358,7 @@
                   <div class="contact-link-icon telegram">
                     <img src="/img/svg/contacts/telegram.svg" alt="telegram">
                   </div>
-                  <p>Написать в Telegram</p>
+                  <p>Telegram</p>
               </a>
           </div>
           <div class="contact-link-wrapper">
@@ -366,7 +366,7 @@
                 <div class="contact-link-icon whatsapp">
                   <img src="/img/svg/contacts/whatsapp.svg" alt="whatsapp">
                 </div>
-                <p>Написать в WhatsApp</p>
+                <p>WhatsApp</p>
               </a>
           </div>
           <div class="contact-link-wrapper">
@@ -374,7 +374,7 @@
                 <div class="contact-link-icon skype">
                   <img src="/img/svg/contacts/skype.svg" alt="skype">
                 </div>
-                <p>Написать в Skype</p>
+                <p>Skype</p>
               </a>
           </div>
           <div class="contact-link-wrapper">
@@ -382,7 +382,7 @@
                 <div class="contact-link-icon instagram">
                   <img src="/img/svg/contacts/instagram.svg" alt="instagram">
                 </div>
-                <p>Написать в Instagram</p>
+                <p>Instagram</p>
               </a>
           </div>
       </div>
