fixed img paths

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
       </div>
       <div class="row">
           <div class="col-lg-4 img-wrapper">
-              <img src="/img/my-photo.jpg" alt="my-photo">
+              <img src="img/my-photo.jpg" alt="my-photo">
           </div>
           <div class="col-lg-8 about-text">
               <p>Здравствуйте, меня зовут Артем, я занимаюсь веб-дизайном и разработкой сайтов различного
@@ -340,7 +340,7 @@
           <div class="contact-link-wrapper">
               <a href="tel:+380955661002">
                 <div class="contact-link-icon phone">
-                  <img src="/img/svg/contacts/phone.svg" alt="позвонить">
+                  <img src="img/svg/contacts/phone.svg" alt="позвонить">
                 </div>
                 <p class="phone-txt">Позвонить<br> +38(095)566-10-02</p>
               </a>
@@ -348,7 +348,7 @@
           <div class="contact-link-wrapper">
               <a href="viber://add?number=380955661002">
                   <div class="contact-link-icon viber">
-                      <img src="/img/svg/contacts/viber.svg" alt="viber">
+                      <img src="img/svg/contacts/viber.svg" alt="viber">
                   </div>
                   <p>Viber</p>
               </a>
@@ -356,7 +356,7 @@
           <div class="contact-link-wrapper">
               <a href="https://telegram.me/ArtemSte">
                   <div class="contact-link-icon telegram">
-                    <img src="/img/svg/contacts/telegram.svg" alt="telegram">
+                    <img src="img/svg/contacts/telegram.svg" alt="telegram">
                   </div>
                   <p>Telegram</p>
               </a>
@@ -364,7 +364,7 @@
           <div class="contact-link-wrapper">
               <a href="https://wa.me/380955661002">
                 <div class="contact-link-icon whatsapp">
-                  <img src="/img/svg/contacts/whatsapp.svg" alt="whatsapp">
+                  <img src="img/svg/contacts/whatsapp.svg" alt="whatsapp">
                 </div>
                 <p>WhatsApp</p>
               </a>
@@ -372,7 +372,7 @@
           <div class="contact-link-wrapper">
               <a href="skype:art_ste?chat">
                 <div class="contact-link-icon skype">
-                  <img src="/img/svg/contacts/skype.svg" alt="skype">
+                  <img src="img/svg/contacts/skype.svg" alt="skype">
                 </div>
                 <p>Skype</p>
               </a>
@@ -380,7 +380,7 @@
           <div class="contact-link-wrapper">
               <a href="https://www.instagram.com/art.web.dev/">
                 <div class="contact-link-icon instagram">
-                  <img src="/img/svg/contacts/instagram.svg" alt="instagram">
+                  <img src="img/svg/contacts/instagram.svg" alt="instagram">
                 </div>
                 <p>Instagram</p>
               </a>
