--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,18 @@
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
-    <header>
-        
+    <!--HEADER-->
+    <header class="header">
+        <!--NAVBAR-->
+        <nav class="header__navbar">
+            <ul class="header__navmenu navmenu">
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </nav>
     </header>
     <script src="js/main.min.js"></script>
 </body>
