--- a/src/index.html
+++ b/src/index.html
@@ -94,7 +94,7 @@
                 <p class="start-screen__and-letter">&</p>
                 <h2 class="start-screen__small-heading">DEVELOPMENT</h2>
                 <p class="start-screen__description">Информационный сайт / сайт-портфолио /  лендинг / блог / интернет магазин / графический дизайн</p>
-                <button class="btn btn-lg more-btn">Узнать больше</button>
+                <a href="#"><button class="start-screen__btn">Узнать больше</button></a>
             </div>
         </div>
     </header>
