add about + fix scss import

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My page</title>
     <link rel="stylesheet" href="css/style.min.css">
+    
 </head>
 <body>
     <!--HEADER-->
@@ -98,6 +99,25 @@
             </div>
         </div>
     </header>
+    <main class="main-content">
+        <!--ABOUT ME-->
+        <section id="about_me" class="main-content__about-me about-me">
+            <img src="images/my-photo.jpg" alt="photo" class="about-me__photo">
+            <div class="about-me__wrapper">
+                <h2 class="about-me__heading">Обо мне</h2>
+                <p class="about-me__text">
+                    Здравствуйте, меня зовут Артем, я занимаюсь веб-дизайном и разработкой сайтов различного назначения.
+                     Имею высшее техническое образование, закончил курсы веб-разработки, стараюсь постоянно совершенствовать
+                      свои навыки путем самообучения. Работу над проектом всегда организовываю таким образом, чтобы заказчик
+                       мог контроллировать процесс выполнения проекта и участвовать в его реализации на каждом
+                     из этапов выполнения.
+                </p>
+            </div>
+        </section>
+        <section>
+            
+        </section>
+    </main>
     <script src="js/main.min.js"></script>
 </body>
 </html>
